PolyXpress/logfiles/nodeLog20160702.12.00.txt
mhlog: [Sat Jul 02 2016 18:09:35 GMT-0700 (PDT)] Message: Running locally

/Users/dcreel121/Thesis3/PolyXpress/models/polyXpressMessageModels.js:16
		receiver	: {type: Schema.Types.ObjectId, ref: 'User', required: true},
		^^^^^^^^
SyntaxError: Unexpected identifier
    at Module._compile (module.js:439:25)
    at Object.Module._extensions..js (module.js:474:10)
    at Module.load (module.js:356:32)
    at Function.Module._load (module.js:312:12)
    at Module.require (module.js:364:17)
    at require (module.js:380:17)
    at Object.<anonymous> (/Users/dcreel121/Thesis3/PolyXpress/app.js:41:23)
    at Module._compile (module.js:456:26)
    at Object.Module._extensions..js (module.js:474:10)
    at Module.load (module.js:356:32)
    at Function.Module._load (module.js:312:12)
    at Function.Module.runMain (module.js:497:10)
    at startup (node.js:119:16)
    at node.js:929:3
